# pandrs

./: .clippy.toml  .gitignore  BENCHMARKING.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.toml.orig  Cargo.toml.test  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATION_STRATEGY.md  PANDAS_ROADMAP.md  PANDRS_ROADMAP.md  PERFORMANCE_PLAN.md  PRODUCTION_READINESS.md  README.md  REFACTORING_PLAN.md  SOURCE_CODE_TRANSLATION_PLAN.md  TODO.md  build.rs  deps-before-update.txt  libast.rlib  pandrs.sample.yml  rustfmt.toml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: release.yml  rust.yml
benches/: comprehensive_benchmark.rs  comprehensive_features_benchmark.rs  dataframe_bench.rs  enhanced_comprehensive_benchmark.rs  legacy_dataframe_bench.rs  pandas_comparison_benchmark.rs  profiling_benchmark.rs  regression_benchmark.rs
docs/: API_GUIDE.md  ECOSYSTEM_INTEGRATION_GUIDE.md  GPU_ACCELERATION_GUIDE.md  GPU_WINDOW_IMPLEMENTATION_SUMMARY.md  JIT_COMPILATION.md  PERFORMANCE_PLAN.md  README.md
docs/architecture/: CLUSTER_EXECUTION_EVALUATION.md  MODULE_REORGANIZATION_PLAN.md
docs/development/: CLAUDE_TEST_PLAN.md
docs/planning/: DISTRIBUTED_PROCESSING_PLAN.md  R_INTEGRATION_PLAN.md
docs/release/: CHANGELOG.md  IMPLEMENTATION_COMPLETION_SUMMARY.md
examples/: advanced_indexing_demo.rs  advanced_indexing_types_demo.rs  advanced_multi_index_demo.rs  basic_usage.rs  benchmark_comparison.rs  benchmark_million.rs  business_analytics_hierarchical_example.rs  categorical_example.rs  categorical_na_example.rs  column_prototype.rs  comprehensive_demo.rs  comprehensive_io_demo.rs  comprehensive_window_example.rs  database_integration_example.rs  dataframe_window_example.rs  datetime_accessor_example.rs  direct_aggregation_performance_demo.rs  distributed_context_example.rs  distributed_example.rs  distributed_expr_example.rs  distributed_expr_validation_example.rs  distributed_fault_tolerance_example.rs  distributed_optimizer_example.rs  distributed_schema_validation_example.rs  distributed_window_example.rs  ecosystem_integration_demo.rs  enhanced_datetime_accessor_example.rs  enhanced_plotting_demo.rs  enhanced_visualization_example.rs  enhanced_window_operations_demo.rs  excel_advanced_features_example.rs  excel_multisheet_example.rs  features_demo.rs  getting_started.rs  gpu_benchmark_example.rs  gpu_dataframe_api_example.rs  gpu_dataframe_example.rs  gpu_matrix_example.rs  gpu_ml_example.rs  gpu_stats_example.rs  (+70 more)
examples/wasm_example/: build_wasm.sh  index.html  lib.rs
py_bindings/: Cargo.toml  README.md  pyproject.toml  setup.py
py_bindings/examples/: basic_usage.py  benchmark.py  benchmark_million.py  gpu_benchmark.py  optimized_benchmark.py  optimized_benchmark_updated.py  pandrs_tutorial.ipynb  string_pool_benchmark.py  string_pool_test.py  test_pandas_integration.py
py_bindings/python/pandrs/: __init__.py  benchmark.py  compat.py  jupyter.py
py_bindings/src/: lib.rs  lib.rs.original  pandas_compat.rs  py_gpu.rs  py_optimized.rs
py_bindings/src/py_optimized/: py_string_pool.rs
py_bindings/tests/: test_alpha4_integration.py  test_dataframe.py
scripts/: validate_performance.rs
src/: arrow_integration.rs  error.rs  lib.rs  main.rs  na.rs
src/column/: boolean_column.rs  common.rs  float64_column.rs  int64_column.rs  mod.rs  simd_operations.rs  simple_zero_copy_string_column.rs  string_column.rs  string_pool.rs  zero_copy_string_column.rs
src/compute/: lazy.rs  mod.rs  parallel.rs
src/config/: credentials.rs  loader.rs  mod.rs  resilience.rs  validation.rs
src/connectors/: cloud.rs  database.rs  mod.rs
src/core/: advanced_multi_index.rs  column.rs  column_ops.rs  data_value.rs  dataframe_ops.rs  dataframe_traits.rs  error.rs  error_context.rs  index.rs  migration.rs  mod.rs  multi_index.rs
src/dataframe/: advanced_indexing.rs  apply.rs  base.rs  categorical.rs  enhanced_window.rs  gpu.rs  gpu_window.rs  groupby.rs  groupby_window.rs  hierarchical_groupby.rs  indexing.rs  jit_window.rs  join.rs  mod.rs  multi_index_cross_section.rs  multi_index_results.rs  optimized.rs  plotting.rs  query.rs  serialize.rs  transform.rs  view.rs  window.rs
src/distributed/: context.rs  dataframe.rs  explain.rs  fault_tolerance.rs  mod.rs  partition.rs  schema_validator.rs  statistics.rs  window.rs
src/gpu/: benchmark.rs  cuda.rs  mod.rs  operations.rs
src/groupby/: mod.rs
src/index/: mod.rs  multi_index.rs
src/index_impl/: mod.rs  multi_index.rs
src/io/: csv.rs  excel.rs  format_traits.rs  json.rs  mod.rs  parquet.rs  sql.rs  sql_backup.rs  streaming.rs
src/jupyter/: mod.rs
src/large/: mod.rs
src/ml/: anomaly_detection.rs  automl.rs  backward_compat.rs  clustering.rs  dimension_reduction.rs  feature_engineering.rs  gpu.rs  mod.rs  model_selection.rs  models.rs  pipeline.rs  pipeline_compat.rs  pipeline_extended.rs  preprocessing.rs  sklearn_compat.rs
src/optimized/: convert.rs  dataframe.rs  direct_aggregations.rs  lazy.rs  mod.rs  operations.rs
src/parallel/: mod.rs
src/pivot/: mod.rs
src/series/: base.rs  categorical.rs  datetime_accessor.rs  functions.rs  mod.rs  (+4 more)
tests/: apply_test.rs  categorical_df_test.rs  categorical_na_test.rs  categorical_na_test_utils.rs  categorical_test.rs  comprehensive_window_test.rs  concurrency_test.rs  config_test.rs  dataframe_set_name_test.rs  dataframe_test.rs  debug_string_accessor.rs  distributed_advanced_test.rs  distributed_expr_test.rs  distributed_expr_validation_test.rs  distributed_fault_tolerance_test.rs  edge_cases_test.rs  gpu_test.rs  groupby_test.rs  index_test.rs  integration_test.rs  io_error_conditions_test.rs  io_test.rs  large_dataset_test.rs  ml_advanced_test.rs  ml_basic_test.rs  model_serving_test.rs  multi_index_test.rs  na_test.rs  optimized_apply_test.rs  optimized_categorical_test.rs  optimized_custom_aggregation_test.rs  optimized_dataframe_test.rs  optimized_groupby_enhanced_test.rs  optimized_groupby_test.rs  optimized_io_test.rs  optimized_io_test_utils.rs  optimized_join_test.rs  optimized_lazy_test.rs  optimized_multi_index_groupby_test.rs  optimized_multi_index_test.rs  (+15 more)
(+202 files in other folders)
