[package]
name = "pandrs-python"
version = "0.1.0-alpha.3"
edition = "2021"
description = "Python bindings for PandRS (Rust implementation of pandas-like DataFrame)"
authors = ["Cool Japan"]
license = "Apache-2.0"
repository = "https://github.com/cool-japan/pandrs"

[lib]
name = "pandrs"
crate-type = ["cdylib"]

[dependencies]
pandrs = { path = "..", default-features = false }
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py38"] }
numpy = "0.25.0"
ndarray = "0.16.1"

[features]
default = []
cuda = ["pandrs/cuda"]